<?xml version="1.0"?>
<package format="3">
  <name>external_odometry</name>
  <version>0.1.0</version>
  <description>External odometry publisher for MAVROS SITL</description>
  <maintainer email="test@example.com">Me</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
